# ralph-pro

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: mcp-audit-recipe.md
examples/: audit-mcp-zus.sh
examples/skills/: README.md
examples/skills/bug-investigate/: SKILL.md
examples/skills/ci-fix/: SKILL.md
examples/skills/code-explain/: SKILL.md
examples/skills/confluence-create-page/: SKILL.md
examples/skills/daily-channel-summary/: SKILL.md
examples/skills/dependency-audit/: SKILL.md
examples/skills/hello-world/: SKILL.md
examples/skills/jira-sprint-report/: SKILL.md
examples/skills/pr-review-checklist/: SKILL.md
examples/skills/refactor-extract-component/: SKILL.md
examples/skills/weekly-tempo-summary/: SKILL.md
prompts/: audit-mcp-generic.md  audit-mcp-zus.md
src/ralph/: __init__.py  budget.py  cli.py  config.py  exit_detect.py  loop.py  plugins.py  runner.py  skills.py  state.py  telemetry.py  worktree.py
src/ralph/mcp_audit/: __init__.py  client.py  prompts.py  reporter.py
src/ralph/observability/: __init__.py
tests/integration/: test_mcp_client_e2e.py
tests/unit/: test_budget.py  test_cli_runs.py  test_exit_detect.py  test_loop_dry.py  test_mcp_audit_helpers.py  test_plugins.py  test_runner_dry.py  test_skills.py  test_state.py  test_telemetry.py  test_worktree.py
