[project]
name = "ralph-claude-code"
version = "0.1.0"
description = "Ralph Wiggum loop for autonomous Claude Code audits — MCP test harness with cost caps and worktree isolation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Bartosz Gaca" }]
requires-python = ">=3.11"
keywords = ["ralph-loop", "claude-code", "mcp", "anthropic", "autonomous-agent", "test-harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[project.scripts]
ralph = "ralph.cli:app"

[project.urls]
Repository = "https://github.com/gacabartosz/ralph-claude-code"
Issues = "https://github.com/gacabartosz/ralph-claude-code/issues"
"Pattern reference" = "https://ghuntley.com/ralph/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ralph"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "PLC0415"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "integration: requires claude CLI installed and ANTHROPIC_API_KEY",
    "manual: requires manual setup or live MCP server",
]
